tests/dataset/tpc-ds/compiler/c/q22.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:38Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct Inventory Inventory;
typedef struct DateDim DateDim;
typedef struct Item Item;

typedef struct {
  const char *i_product_name;
  const char *i_brand;
  const char *i_class;
  const char *i_category;
  double qoh;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *i_product_name;
  const char *i_brand;
  const char *i_class;
  const char *i_category;
  double qoh;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int inv_item_sk;
  int inv_date_sk;
  int inv_quantity_on_hand;
} inventory_t;

typedef struct {
  int d_date_sk;
  int d_month_seq;
} date_dim_t;

typedef struct {
  int i_item_sk;
  const char *i_product_name;
  const char *i_brand;
  const char *i_class;
  const char *i_category;
} item_t;

typedef struct {
  int i_product_name;
  int i_brand;
  int i_class;
  int i_category;
  double qoh;
} qoh_item_t;
typedef struct {
  int len;
  qoh_item_t *data;
} qoh_item_list_t;
qoh_item_list_t create_qoh_item_list(int len) {
  qoh_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(qoh_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Inventory {
  int inv_item_sk;
  int inv_date_sk;
  int inv_quantity_on_hand;
} Inventory;
typedef struct {
  int len;
  inventory_t *data;
} inventory_list_t;
inventory_list_t create_inventory_list(int len) {
  inventory_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(inventory_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  int d_month_seq;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  char *i_product_name;
  char *i_brand;
  char *i_class;
  char *i_category;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q22_average_inventory_qoh;
static void test_TPCDS_Q22_average_inventory() {
  tmp1_t tmp1[] = {(tmp1_t){.i_product_name = "Prod1",
                            .i_brand = "Brand1",
                            .i_class = "Class1",
                            .i_category = "Cat1",
                            .qoh = 15.0},
                   (tmp_item_t){.i_product_name = "Prod2",
                                .i_brand = "Brand2",
                                .i_class = "Class2",
                                .i_category = "Cat2",
                                .qoh = 50.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q22_average_inventory_qoh.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q22_average_inventory_qoh.len; i3++) {
      if (test_TPCDS_Q22_average_inventory_qoh.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  inventory_t inventory[] = {
      (inventory_t){
          .inv_item_sk = 1, .inv_date_sk = 1, .inv_quantity_on_hand = 10},
      (inventory_t){
          .inv_item_sk = 1, .inv_date_sk = 2, .inv_quantity_on_hand = 20},
      (inventory_t){
          .inv_item_sk = 1, .inv_date_sk = 3, .inv_quantity_on_hand = 10},
      (inventory_t){
          .inv_item_sk = 1, .inv_date_sk = 4, .inv_quantity_on_hand = 20},
      (inventory_t){
          .inv_item_sk = 2, .inv_date_sk = 1, .inv_quantity_on_hand = 50}};
  int inventory_len = sizeof(inventory) / sizeof(inventory[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_month_seq = 0},
                           (date_dim_t){.d_date_sk = 2, .d_month_seq = 1},
                           (date_dim_t){.d_date_sk = 3, .d_month_seq = 2},
                           (date_dim_t){.d_date_sk = 4, .d_month_seq = 3}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_product_name = "Prod1",
                            .i_brand = "Brand1",
                            .i_class = "Class1",
                            .i_category = "Cat1"},
                   (item_t){.i_item_sk = 2,
                            .i_product_name = "Prod2",
                            .i_brand = "Brand2",
                            .i_class = "Class2",
                            .i_category = "Cat2"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  qoh_item_list_t qoh = (qoh_item_list_t){0, NULL};
  printf("[");
  for (int i4 = 0; i4 < qoh.len; i4++) {
    if (i4 > 0)
      printf(",");
    qoh_item_t it = qoh.data[i4];
    printf("{");
    _json_string("i_product_name");
    printf(":");
    _json_int(it.i_product_name);
    printf(",");
    _json_string("i_brand");
    printf(":");
    _json_int(it.i_brand);
    printf(",");
    _json_string("i_class");
    printf(":");
    _json_int(it.i_class);
    printf(",");
    _json_string("i_category");
    printf(":");
    _json_int(it.i_category);
    printf(",");
    _json_string("qoh");
    printf(":");
    _json_float(it.qoh);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q22_average_inventory_qoh = qoh;
  test_TPCDS_Q22_average_inventory();
  return 0;
}
